tests/examples/snapshots/defs.fly.inline.1.snap
---
source: tests/test_examples.rs
description: "--name=inline.1 -- inline tests/examples/defs.fly"
expression: combined_stdout_stderr
---
sort thread
mutable p(thread): bool
mutable q(thread): bool
immutable t0: thread

assume init
assume (exists t:thread. p(t) & q(t)) & (p(t) & q(t))' = (p(t) & q(t)) | t = t0
assume !q
assert p(t0)
proof {

}

======== STDERR: ===========

